Fixed overlap and added component (#49)
Fixed cursor selection issue for food trucks on homepage and added a MenuItem component

--- a/src/pages/home-page/homepage.css
+++ b/src/pages/home-page/homepage.css
@@ -29,6 +29,7 @@
   display: flex;
   flex-direction: column;
   align-items: left;
+  z-index: 2147483646;
 }
 
 .truckTitle {
